--- a/glossary.tex
+++ b/glossary.tex
@@ -43,7 +43,11 @@
 %
 % myRIO
 \newglossaryentry{g:myrio}{name=NI myRIO, description={Developmentboard der Firma \acrfull{ac:ni} entwickelt für den günstigen Einstieg in \gls{g:labview}}}
+%
+% ssh
 \newglossaryentry{g:ssh}{name=SSH, description={Steht für Secure Shell und stellt eine gängige Möglichkeit dar eine sicher Verbindung zu einem UNIX-System herzustellen}}
+%
+% webdav
 \newglossaryentry{g:webdav}{name=WebDAV, description={Steht für Web-based Distributed Authoring and Versioning und stellt ein offener Standard für den Datentransfer im Internet dar}}
 %
 % MATLAB
@@ -69,3 +73,6 @@
 %
 % zeit_invariant
 \newglossaryentry{g:zeit_invariant}{name=zeit-invariant,description={System ist zeitunabhängig, ein um $\tau$ verzögertes Signal am Eingang ist auch am Ausgang um $\tau$ verzögert}}
+%
+% Gyroskop
+\newglossaryentry{g:gyroskop}{name=Gyroskop,description={Inertialmessgerät zum Messen der Winkelgeschwindigkeit um ein Drehachse. Durch Integration der Winkelgeschwindigkeit kann auf den Drehwinkel geschlossen werden}}
